--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -55,12 +55,12 @@ main {
           }
         }
 
-        // figure {
-        //   position: relative;
-        //   // background-color: $white;
-        //   width: 80%;
-        //   margin: 0 auto;
-        // }
+        figure {
+          position: relative;
+          width: fit-content;
+          margin: 0 auto;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        }
 
         img {
           margin: 0 auto 40px;
@@ -128,6 +128,10 @@ main {
         top: 120px;
         width: 100%;
         height: fit-content;
+        padding: 20px;
+        border-radius: 20px;
+        background-color: #fff;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         @media screen and (min-width: 950px) {
           width: 30%;
         }
