--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -104,7 +104,7 @@ main {
 
               a {
                 color: $main-blue;
-                font-weight: normal;
+                font-weight: inherit;
                 text-transform: capitalize;
 
                 &:hover {
