--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,6 @@ h3 {
 #section-heart ul.top {
   text-align: center;
   margin-top: 40px;
-  margin-bottom: 40px;
   list-style-type: none;
 }
 @media screen and (min-width: 950px) {
@@ -726,8 +725,8 @@ h3 {
   padding: 16px;
   background: rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
-  -webkit-backdrop-filter: blur(12px);
-          backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(0px);
+          backdrop-filter: blur(0px);
   color: #fff;
   font-weight: bold;
   font-size: 14px;
@@ -779,8 +778,8 @@ h3 {
   margin-top: 10px;
 }
 #section-faq #container-faq hr {
-  width: 58%;
-  margin-top: 5px;
+  width: 55%;
+  margin-top: 15px;
   margin-bottom: 5px;
   border: 1px solid lightgray;
 }
@@ -788,14 +787,15 @@ h3 {
   position: relative;
   width: 90%;
   max-width: 770px;
-  min-height: 80px;
+  height: -moz-fit-content;
+  height: fit-content;
   padding-left: 15px;
   padding-right: 30px;
   cursor: pointer;
 }
 #section-faq #container-faq .item-faq .toggle-symbol {
   position: absolute;
-  top: 15px;
+  top: 8px;
   right: 20px;
   font-size: 28px;
   font-weight: bold;
@@ -805,7 +805,7 @@ h3 {
   content: "+";
 }
 #section-faq #container-faq .item-faq .question {
-  margin-bottom: 5px;
+  margin: 10px 0 10px;
   font-size: 18px;
   font-weight: bold;
 }
@@ -898,7 +898,7 @@ h3 {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 500px;
-  border-radius: 0 0 50px 50px;
+  border-radius: 0 0 20px 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 #section-location #container-info-location ul li {
