--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -1,3 +1,10 @@
+$btn-red: #ff5e38;
+$btn-red-hover: #b53928;
+$main-blue: #0868ae;
+$white: #fff;
+$black: #070606;
+$footer: #043a61;
+
 *,
 ::after,
 ::before {
@@ -18,52 +25,166 @@ body {
 }
 
 ul {
-    list-style: none;
-  }
-
-li {
-  margin-top: 50px;
+  list-style: none;
 }
 
 a {
-  font-size: 14px;
   text-decoration: none;
-  color: #fff;
-  padding: 50px;
-  margin-top: 50px;
 }
 
-header {
-  height: 100vh;
-  position: fixed;
+main {
+  padding-left: 200px;
+  z-index: -1;
+}
 
-  #main-sidebar {
-    height: 100%;
-    width: 120px;
-    background-color: blue;
+header#side-bar-log {
+  #sidebar-wrapper {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 70px;
     display: flex;
-    flex-direction: column;
-    padding-bottom: 40px;
+    transition: width 0.5s;
+    overflow: hidden;
+    white-space:nowrap ;
 
-    #container-top-navigation {
-      width: 100%;
-      text-align: center;
-
-      #logo-sidebar {
-        width: 90%;
-      }
+    &.active {
+      width: 250px;
     }
 
-    #container-group-profil {
+    nav#main-sidebar {
       width: 100%;
-      margin-top: auto;
-      text-align: center;
+      height: 100%;
+      background-color: $main-blue;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-left: 3px;
+      padding-bottom: 40px;
+      transition: all 0.5s;
+
+      #container-top-navigation {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        a#logo-sidebar {
+          margin-bottom: 40px;
+          width: 120px;
+          position: relative;
+          white-space:nowrap ;
+
+          img#logo-big-sidebar {
+            width: 80px;
+            position: absolute;
+            left: -7px;
+            top: 10px;
+          }
+
+          #dashbord-title {
+            font-size: 30px;
+            font-weight: bold;
+            font-family: "Nova Slim", cursive;
+            margin-left: 150px;
+            margin-top: 50px;
+          }
+        }
+
+        span {
+          font-size: 16px;
+          font-weight: bold;
+          color: #fff;
+          margin-bottom: 20px;
+        }
+
+        ul.list-btn-side-bar {
+          position: relative;
+          list-style: none;
+        }
+
+        li {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          height: 60px;
+          display: flex;
+          align-items: baseline;
+          padding-bottom: 10px;
+
+          &:hover {
+            background-color: #05497b;
+          }
+
+          img {
+            margin-right: 30px;
+          }
+        }
+
+        a {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 14px;
+          font-weight: bold;
+          text-decoration: none;
+          color: #fff;
+          padding: 20px;
+          margin-bottom: 5px;
+        }
+      }
+
+      div#container-group-profil {
+        ul {
+          li {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            height: 60px;
+            display: flex;
+            align-items: baseline;
+            padding-bottom: 10px;
+            position: relative;
+
+            &:hover {
+              background-color: #05497b;
+            }
+
+            img {
+              margin-right: 30px;
+            }
+          }
+
+          a {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #fff;
+            padding: 20px;
+            margin-bottom: 5px;
+            white-space:nowrap ;
+          }
+
+          a#profil {
+            color: $white;
+            margin-left: 50px;
+            white-space:nowrap ;
+
+            img#profil-pict {
+              position: absolute;
+              top: 6px;
+              left: 8px;
+            }
+          }
+        }
+      }
     }
   }
 }
 
-main {
-    padding-left: 200px;
-    padding-top: 20px;
-    z-index: -1;
+section#dashboard-page-default {
+  padding-top: 40px;
 }
