--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -17,6 +17,44 @@ body {
   font-family: "Hind Madurai", sans-serif;
 }
 
+h1.h1-dashboard {
+  font-size: 20px;
+  text-align: inherit;
+  color: #0868ae;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  h1.h1-dashboard {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+}
+
+h2.h2-dashboard {
+  font-size: 14px;
+  text-align: inherit;
+  color: #0868ae;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  h2.h2-dashboard {
+    font-size: 20px;
+    margin-bottom: 12px;
+  }
+}
+
+h3.h3-dashboard {
+  font-size: 12px;
+  text-align: inherit;
+  color: #ff5e38;
+  margin-bottom: 6px;
+}
+@media screen and (min-width: 950px) {
+  h3.h3-dashboard {
+    font-size: 16px;
+  }
+}
+
 ul {
   list-style: none;
 }
@@ -145,7 +183,7 @@ header#side-bar-log #sidebar-wrapper nav#main-sidebar div#container-group-profil
 }
 header#side-bar-log #sidebar-wrapper nav#main-sidebar div#container-group-profil ul a#profil {
   color: #fff;
-  margin-left: 50px;
+  margin-left: 55px;
   white-space: nowrap;
 }
 header#side-bar-log #sidebar-wrapper nav#main-sidebar div#container-group-profil ul a#profil img#profil-pict {
@@ -156,4 +194,51 @@ header#side-bar-log #sidebar-wrapper nav#main-sidebar div#container-group-profil
 
 section#dashboard-page-default {
   padding-top: 40px;
+  padding-left: 50px;
+}
+section#dashboard-page-default div#container-dashboard-base .box-dashboard {
+  width: 70%;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 30px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+section#dashboard-page-default div#container-dashboard-base .box-dashboard hr {
+  width: 100%;
+  margin: 10px auto;
+}
+section#dashboard-page-default div#container-dashboard-base .box-dashboard ul {
+  padding: 10px;
+  background-color: #f0f7ff;
+  border-radius: 5px;
+}
+section#dashboard-page-default div#container-dashboard-base #container-home-tabs {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs {
+  display: none;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info {
+  text-align: center;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+  margin: 10px auto;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname #firstname {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px;
+}
+section#dashboard-page-default div#container-dashboard-base div#container-profil-tabs div#box-personal-info form#form-personal-info #container-fullname #lastname {
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=style-admin.css.map */
